--- a/Preparcial/Preparcial.csproj
+++ b/Preparcial/Preparcial.csproj
@@ -8,7 +8,7 @@
         <OutputType>WinExe</OutputType>
         <RootNamespace>Preparcial</RootNamespace>
         <AssemblyName>Preparcial</AssemblyName>
-        <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <Deterministic>true</Deterministic>
@@ -55,11 +55,11 @@
         <Compile Include="Admin.Designer.cs">
           <DependentUpon>Admin.cs</DependentUpon>
         </Compile>
-        <Compile Include="Cliente.cs">
-          <SubType>Form</SubType>
+        <Compile Include="Administrador.cs">
+          <SubType>UserControl</SubType>
         </Compile>
-        <Compile Include="Cliente.Designer.cs">
-          <DependentUpon>Cliente.cs</DependentUpon>
+        <Compile Include="Administrador.Designer.cs">
+          <DependentUpon>Administrador.cs</DependentUpon>
         </Compile>
         <Compile Include="CrearUsuario.cs">
           <SubType>UserControl</SubType>
@@ -78,12 +78,6 @@
         </Compile>
         <Compile Include="Historialpedidos.Designer.cs">
           <DependentUpon>Historialpedidos.cs</DependentUpon>
-        </Compile>
-        <Compile Include="loginaAdmin.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="loginaAdmin.Designer.cs">
-          <DependentUpon>loginaAdmin.cs</DependentUpon>
         </Compile>
         <Compile Include="MantInventario.cs">
           <SubType>UserControl</SubType>
@@ -105,11 +99,17 @@
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="UserCliente.cs">
+          <SubType>UserControl</SubType>
+        </Compile>
+        <Compile Include="UserCliente.Designer.cs">
+          <DependentUpon>UserCliente.cs</DependentUpon>
+        </Compile>
         <EmbeddedResource Include="Admin.resx">
           <DependentUpon>Admin.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="Cliente.resx">
-          <DependentUpon>Cliente.cs</DependentUpon>
+        <EmbeddedResource Include="Administrador.resx">
+          <DependentUpon>Administrador.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="CrearUsuario.resx">
           <DependentUpon>CrearUsuario.cs</DependentUpon>
@@ -119,9 +119,6 @@
         </EmbeddedResource>
         <EmbeddedResource Include="Historialpedidos.resx">
           <DependentUpon>Historialpedidos.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="loginaAdmin.resx">
-          <DependentUpon>loginaAdmin.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="MantInventario.resx">
           <DependentUpon>MantInventario.cs</DependentUpon>
@@ -141,6 +138,9 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="UserCliente.resx">
+          <DependentUpon>UserCliente.cs</DependentUpon>
+        </EmbeddedResource>
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
