--- a/Preparcial/Preparcial.csproj
+++ b/Preparcial/Preparcial.csproj
@@ -33,11 +33,19 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Npgsql, Version=3.2.7.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7">
+          <HintPath>packages\Npgsql.3.2.7\lib\net451\Npgsql.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="Preparcial, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>bin\Debug\Preparcial.exe</HintPath>
         </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
+        <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Xml.Linq" />
         <Reference Include="System.Data.DataSetExtensions" />
         <Reference Include="Microsoft.CSharp" />
@@ -49,48 +57,18 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="AdmiMenu.cs">
-          <SubType>UserControl</SubType>
-        </Compile>
-        <Compile Include="AdmiMenu.Designer.cs">
-          <DependentUpon>AdmiMenu.cs</DependentUpon>
-        </Compile>
-        <Compile Include="CrearUsuario.cs">
-          <SubType>UserControl</SubType>
-        </Compile>
-        <Compile Include="CrearUsuario.Designer.cs">
-          <DependentUpon>CrearUsuario.cs</DependentUpon>
-        </Compile>
+        <Compile Include="ConexionBD.cs" />
+        <Compile Include="ConsultasInventario.cs" />
+        <Compile Include="ConsultasPedido.cs" />
+        <Compile Include="ConsultasUsuario.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
         </Compile>
         <Compile Include="Form1.Designer.cs">
             <DependentUpon>Form1.cs</DependentUpon>
         </Compile>
-        <Compile Include="Historialpedidos.cs">
-          <SubType>UserControl</SubType>
-        </Compile>
-        <Compile Include="Historialpedidos.Designer.cs">
-          <DependentUpon>Historialpedidos.cs</DependentUpon>
-        </Compile>
-        <Compile Include="MantInventario.cs">
-          <SubType>UserControl</SubType>
-        </Compile>
-        <Compile Include="MantInventario.Designer.cs">
-          <DependentUpon>MantInventario.cs</DependentUpon>
-        </Compile>
-        <Compile Include="MantUsuario.cs">
-          <SubType>UserControl</SubType>
-        </Compile>
-        <Compile Include="MantUsuario.Designer.cs">
-          <DependentUpon>MantUsuario.cs</DependentUpon>
-        </Compile>
-        <Compile Include="Pedidos.cs">
-          <SubType>UserControl</SubType>
-        </Compile>
-        <Compile Include="Pedidos.Designer.cs">
-          <DependentUpon>Pedidos.cs</DependentUpon>
-        </Compile>
+        <Compile Include="Inventario.cs" />
+        <Compile Include="Pedido.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="UserAdmi.cs">
@@ -99,38 +77,15 @@
         <Compile Include="UserAdmi.Designer.cs">
           <DependentUpon>UserAdmi.cs</DependentUpon>
         </Compile>
-        <Compile Include="Clientemenu.cs">
-          <SubType>UserControl</SubType>
-        </Compile>
-        <Compile Include="Clientemenu.Designer.cs">
-          <DependentUpon>Clientemenu.cs</DependentUpon>
-        </Compile>
         <Compile Include="UserCliente.cs">
           <SubType>Form</SubType>
         </Compile>
         <Compile Include="UserCliente.Designer.cs">
           <DependentUpon>UserCliente.cs</DependentUpon>
         </Compile>
-        <EmbeddedResource Include="AdmiMenu.resx">
-          <DependentUpon>AdmiMenu.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="CrearUsuario.resx">
-          <DependentUpon>CrearUsuario.cs</DependentUpon>
-        </EmbeddedResource>
+        <Compile Include="Usuario.cs" />
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="Historialpedidos.resx">
-          <DependentUpon>Historialpedidos.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="MantInventario.resx">
-          <DependentUpon>MantInventario.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="MantUsuario.resx">
-          <DependentUpon>MantUsuario.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="Pedidos.resx">
-          <DependentUpon>Pedidos.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
@@ -144,12 +99,10 @@
         <EmbeddedResource Include="UserAdmi.resx">
           <DependentUpon>UserAdmi.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="Clientemenu.resx">
-          <DependentUpon>Clientemenu.cs</DependentUpon>
-        </EmbeddedResource>
         <EmbeddedResource Include="UserCliente.resx">
           <DependentUpon>UserCliente.cs</DependentUpon>
         </EmbeddedResource>
+        <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
