--- a/Preparcial/Preparcial.csproj
+++ b/Preparcial/Preparcial.csproj
@@ -8,10 +8,11 @@
         <OutputType>WinExe</OutputType>
         <RootNamespace>Preparcial</RootNamespace>
         <AssemblyName>Preparcial</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <Deterministic>true</Deterministic>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,6 +62,7 @@
         <Compile Include="ConsultasInventario.cs" />
         <Compile Include="ConsultasPedido.cs" />
         <Compile Include="ConsultasUsuario.cs" />
+        <Compile Include="Encriptador.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
         </Compile>
@@ -71,6 +73,7 @@
         <Compile Include="Pedido.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="SesionDB.cs" />
         <Compile Include="UserAdmi.cs">
           <SubType>Form</SubType>
         </Compile>
